--- a/admin/index.html
+++ b/admin/index.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Netlify CMS</title>
-  </head>
-  <body>
-    <!-- Netlify Identity Widget（GitHub ログイン用） -->
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-
-    <!-- Netlify CMS 本体 -->
-    <script src="https://unpkg.com/netlify-cms-app/dist/netlify-cms.js"></script>
-
-    <script>
-      if (window.netlifyIdentity) {
-        window.netlifyIdentity.on("init", (user) => {
-          if (!user) window.netlifyIdentity.open();
-        });
-      }
-    </script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <title>Admin</title>
+</head>
+<body>
+  <script src="https://unpkg.com/netlify-cms@2.10.192/dist/netlify-cms.js"></script>
+</body>
 </html>
