--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>すりクラ公式サイト</title>
+  <style>
+    body { font-family: sans-serif; padding: 20px; }
+    .news-item { margin-bottom: 20px; }
+    .news-title { font-size: 1.2em; font-weight: bold; }
+    .news-date { color: #666; font-size: 0.9em; }
+  </style>
 </head>
 <body>
   <h1>すりクラ公式サイト</h1>
@@ -12,32 +18,64 @@
 
   <script>
     async function loadNews() {
+      const container = document.getElementById("news-list");
+
+      // newsフォルダの一覧を取得
       const response = await fetch("./news/");
       const text = await response.text();
 
       const parser = new DOMParser();
       const doc = parser.parseFromString(text, "text/html");
 
-      // news/ ディレクトリ内の *.md を取得
-      const links = [...doc.querySelectorAll("a")]
-        .map(a => a.getAttribute("href"))
-        .filter(href => href.endsWith(".md"))
-        .reverse(); // 新しい順になることが多い
+      // ディレクトリ内の *.md ファイル名を取り出す
+      const files = [...doc.querySelectorAll("a")]
+        .map(a => a.href)
+        .filter(h => h.endsWith(".md"))
+        .map(h => h.split("/").pop());
 
-      const latest3 = links.slice(0, 3);
+      if (files.length === 0) {
+        container.innerHTML = "お知らせはありません。";
+        return;
+      }
 
-      const container = document.getElementById("news-list");
+      // 各 MD ファイルを読み込み、メタデータを抽出
+      const posts = [];
+
+      for (const file of files) {
+        const md = await fetch("./news/" + file).then(r => r.text());
+
+        const titleMatch = md.match(/title:\s*(.*)/);
+        const dateMatch = md.match(/date:\s*(.*)/);
+
+        const title = titleMatch ? titleMatch[1].trim() : "タイトルなし";
+        const date = dateMatch ? new Date(dateMatch[1].trim()) : new Date(0);
+
+        posts.push({
+          title,
+          date,
+          file
+        });
+      }
+
+      // 新しい順にソート
+      posts.sort((a, b) => b.date - a.date);
+
+      // 最新3件
+      const latest = posts.slice(0, 3);
+
       container.innerHTML = "";
 
-      for (const file of latest3) {
-        const md = await fetch("./news/" + file).then(r => r.text());
-        const title = md.match(/title:\s*(.*)/)?.[1] ?? "タイトルなし";
-        const date = md.match(/date:\s*(.*)/)?.[1] ?? "日付なし";
-
+      latest.forEach(post => {
         const item = document.createElement("div");
-        item.innerHTML = `<strong>${title}</strong> (${date})`;
+        item.className = "news-item";
+
+        item.innerHTML = `
+          <div class="news-title">${post.title}</div>
+          <div class="news-date">${post.date.toLocaleDateString()}</div>
+        `;
+
         container.appendChild(item);
-      }
+      });
     }
 
     loadNews();
