--- a/news.html
+++ b/news.html
@@ -2,78 +2,109 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>お知らせ一覧 | すりクラ公式サイト</title>
+  <title>お知らせ一覧</title>
+
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+
   <style>
-    body { font-family: sans-serif; padding: 20px; }
-    h1 { margin-bottom: 20px; }
-    .news-item { margin-bottom: 16px; padding-bottom: 10px; border-bottom: 1px solid #ddd; }
-    .news-title { font-size: 1.2em; font-weight: bold; }
-    .news-date { color: #666; font-size: 0.9em; }
+    body {
+      font-family: sans-serif;
+      padding: 20px;
+      background: #fafafa;
+    }
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    .news-card {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
+
 <body>
 
-  <h1>お知らせ一覧</h1>
+<section id="news">
+  <h2>お知らせ一覧</h2>
   <div id="news-list">読み込み中...</div>
+</section>
 
-  <script>
-    async function loadNews() {
-      const container = document.getElementById("news-list");
+<script>
+async function loadNews() {
+  const repo = "surikurajp/official.github.io";  // ←ここだけあなたのリポジトリ名
+  const container = document.getElementById("news-list");
 
-      // newsフォルダの一覧を取得
-      const response = await fetch("./news/");
-      const text = await response.text();
+  try {
+    // newsフォルダ内の一覧を取得
+    const response = await fetch(`https://api.github.com/repos/${repo}/contents/news`);
+    const files = await response.json();
 
-      const parser = new DOMParser();
-      const doc = parser.parseFromString(text, "text/html");
+    // Markdown ファイルのみ取得
+    const mdFiles = files.filter(f => f.name.endsWith(".md"));
 
-      // ディレクトリ内の *.md を抽出
-      const files = [...doc.querySelectorAll("a")]
-        .map(a => a.href)
-        .filter(href => href.endsWith(".md"))
-        .map(href => href.split("/").pop());
+    // 新しい順に並び替え
+    mdFiles.sort((a, b) => new Date(b.name) - new Date(a.name));
 
-      if (files.length === 0) {
-        container.innerHTML = "お知らせはありません。";
-        return;
+    container.innerHTML = ""; // 消す
+
+    for (const file of mdFiles) {
+      const mdResponse = await fetch(file.download_url);
+      const mdText = await mdResponse.text();
+
+      // frontmatter 抽出
+      const frontMatterMatch = mdText.match(/^---\n([\s\S]*?)\n---/);
+      let title = "タイトル不明";
+      let date = "日付なし";
+      let body = mdText;
+
+      if (frontMatterMatch) {
+        const fm = frontMatterMatch[1];
+
+        // タイトル
+        const titleMatch = fm.match(/title:\s*(.*)/);
+        if (titleMatch) title = titleMatch[1].trim();
+
+        // 日付
+        const dateMatch = fm.match(/date:\s*(.*)/);
+        if (dateMatch) {
+          date = new Date(dateMatch[1].trim()).toLocaleDateString("ja-JP");
+        }
+
+        // 本文から frontmatter を除去
+        body = mdText.replace(frontMatterMatch[0], "").trim();
       }
 
-      const posts = [];
+      const htmlBody = marked.parse(body);
 
-      // 各MDからFrontmatter抽出
-      for (const file of files) {
-        const md = await fetch("./news/" + file).then(r => r.text());
+      // カード生成
+      const div = document.createElement("div");
+      div.className = "news-card";
+      div.innerHTML = `
+        <h3 style="margin: 0 0 6px; font-size: 1.4rem;">${title}</h3>
+        <p style="color:#777; margin: 0 0 12px; font-size: 0.9rem;">${date}</p>
+        <div>${htmlBody}</div>
+      `;
 
-        const titleMatch = md.match(/title:\s*(.*)/);
-        const dateMatch = md.match(/date:\s*(.*)/);
-
-        const title = titleMatch ? titleMatch[1].trim() : "タイトルなし";
-        const date = dateMatch ? new Date(dateMatch[1].trim()) : new Date(0);
-
-        posts.push({ title, date, file });
-      }
-
-      // 新しい順にソート
-      posts.sort((a, b) => b.date - a.date);
-
-      // 表示
-      container.innerHTML = "";
-
-      posts.forEach(post => {
-        const item = document.createElement("div");
-        item.className = "news-item";
-
-        item.innerHTML = `
-          <div class="news-title">${post.title}</div>
-          <div class="news-date">${post.date.toLocaleDateString()}</div>
-        `;
-
-        container.appendChild(item);
-      });
+      container.appendChild(div);
     }
 
-    loadNews();
-  </script>
+    // 1件もなければ
+    if (mdFiles.length === 0) {
+      container.textContent = "お知らせはありません。";
+    }
+
+  } catch (e) {
+    container.textContent = "読み込み中にエラーが発生しました。";
+    console.error(e);
+  }
+}
+
+loadNews();
+</script>
 
 </body>
 </html>
