--- a/index.html
+++ b/index.html
@@ -1,84 +1,93 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8" />
-  <title>すりクラ公式サイト</title>
-  <style>
-    body { font-family: sans-serif; padding: 20px; }
-    .news-item { margin-bottom: 20px; }
-    .news-title { font-size: 1.2em; font-weight: bold; }
-    .news-date { color: #666; font-size: 0.9em; }
-  </style>
-</head>
-<body>
-  <h1>すりクラ公式サイト</h1>
-
-  <h2><a href="news.html">お知らせ</a></h2>
+<section id="news">
+  <h2>最新のお知らせ</h2>
   <div id="news-list">読み込み中...</div>
 
-  <script>
-    async function loadNews() {
-      const container = document.getElementById("news-list");
+  <div style="margin-top: 15px;">
+    <a href="news.html" style="font-size: 1rem; text-decoration: underline;">→ 過去のお知らせを見る</a>
+  </div>
+</section>
 
-      // newsフォルダの一覧を取得
-      const response = await fetch("./news/");
-      const text = await response.text();
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
-      const parser = new DOMParser();
-      const doc = parser.parseFromString(text, "text/html");
+<script>
+async function loadLatestNews() {
+  const repo = "surikurajp/official.github.io";
+  const container = document.getElementById("news-list");
 
-      // ディレクトリ内の *.md ファイル名を取り出す
-      const files = [...doc.querySelectorAll("a")]
-        .map(a => a.href)
-        .filter(h => h.endsWith(".md"))
-        .map(h => h.split("/").pop());
+  try {
+    // news フォルダ取得
+    const response = await fetch(`https://api.github.com/repos/${repo}/contents/news`);
+    const files = await response.json();
 
-      if (files.length === 0) {
-        container.innerHTML = "お知らせはありません。";
-        return;
+    // md のみ
+    const mdFiles = files.filter(f => f.name.endsWith(".md"));
+
+    // 日付新しい順に並び替え
+    mdFiles.sort((a, b) => new Date(b.name) - new Date(a.name));
+
+    // 最新3件だけ取り出す
+    const latest3 = mdFiles.slice(0, 3);
+
+    container.innerHTML = ""; // 初期の「読み込み中」を消す
+
+    for (const file of latest3) {
+      const mdResponse = await fetch(file.download_url);
+      const mdText = await mdResponse.text();
+
+      // frontmatter 抽出
+      const frontMatterMatch = mdText.match(/^---\n([\s\S]*?)\n---/);
+      let title = "タイトル不明";
+      let date = "日付なし";
+      let body = mdText;
+
+      if (frontMatterMatch) {
+        const fm = frontMatterMatch[1];
+
+        // タイトル
+        const titleMatch = fm.match(/title:\s*(.*)/);
+        if (titleMatch) title = titleMatch[1].trim();
+
+        // 日付
+        const dateMatch = fm.match(/date:\s*(.*)/);
+        if (dateMatch) {
+          date = new Date(dateMatch[1].trim()).toLocaleDateString("ja-JP");
+        }
+
+        // 本文除去
+        body = mdText.replace(frontMatterMatch[0], "").trim();
       }
 
-      // 各 MD ファイルを読み込み、メタデータを抽出
-      const posts = [];
+      const htmlBody = marked.parse(body);
 
-      for (const file of files) {
-        const md = await fetch("./news/" + file).then(r => r.text());
+      // 必要に応じて短くする（長文は3行だけ）
+      const shortBody = htmlBody.length > 150 ? htmlBody.slice(0, 150) + "…" : htmlBody;
 
-        const titleMatch = md.match(/title:\s*(.*)/);
-        const dateMatch = md.match(/date:\s*(.*)/);
+      const div = document.createElement("div");
+      div.className = "news-card";
+      div.style.marginBottom = "15px";
+      div.style.padding = "10px";
+      div.style.borderLeft = "4px solid #aaa";
+      div.style.background = "#fff";
 
-        const title = titleMatch ? titleMatch[1].trim() : "タイトルなし";
-        const date = dateMatch ? new Date(dateMatch[1].trim()) : new Date(0);
+      div.innerHTML = `
+        <h3 style="margin: 0 0 6px; font-size: 1.2rem;">${title}</h3>
+        <p style="color:#777; margin: 0 0 10px; font-size: 0.9rem;">${date}</p>
+        <div>${shortBody}</div>
+      `;
 
-        posts.push({
-          title,
-          date,
-          file
-        });
-      }
-
-      // 新しい順にソート
-      posts.sort((a, b) => b.date - a.date);
-
-      // 最新3件
-      const latest = posts.slice(0, 3);
-
-      container.innerHTML = "";
-
-      latest.forEach(post => {
-        const item = document.createElement("div");
-        item.className = "news-item";
-
-        item.innerHTML = `
-          <div class="news-title">${post.title}</div>
-          <div class="news-date">${post.date.toLocaleDateString()}</div>
-        `;
-
-        container.appendChild(item);
-      });
+      container.appendChild(div);
     }
 
-    loadNews();
-  </script>
-</body>
-</html>
+    // 記事が0件の場合
+    if (latest3.length === 0) {
+      container.textContent = "お知らせはありません。";
+    }
+
+  } catch (e) {
+    container.textContent = "お知らせの読み込みに失敗しました。";
+    console.error(e);
+  }
+}
+
+loadLatestNews();
+</script>
