--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
-<section id="news">
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <title>すりクラ公式サイト</title>
+  <style>
+    body { font-family: sans-serif; padding: 20px; }
+    .news-item { margin-bottom: 20px; }
+    .news-title { font-size: 1.2em; font-weight: bold; }
+    .news-date { color: #666; font-size: 0.9em; }
+  </style>
+</head>
+<body>
+  <h1>すりクラ公式サイト</h1>
+
+  <h2><a href="news.html">お知らせ</a></h2>
+  <div id="news-list">読み込み中...</div>
+
+  <section id="news">
   <h2>最新のお知らせ</h2>
   <div id="news-list">読み込み中...</div>
 
@@ -91,3 +109,6 @@ async function loadLatestNews() {
 
 loadLatestNews();
 </script>
+
+</body>
+</html>
