--- a/index.html
+++ b/index.html
@@ -2,57 +2,95 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>すりクラ公式サイト</title>
-  <style>
-    body { font-family: sans-serif; padding: 20px; }
-    .news-item { margin-bottom: 20px; }
-    .news-title { font-size: 1.2em; font-weight: bold; }
-    .news-date { color: #666; font-size: 0.9em; }
-  </style>
+  <title>すりクラ 公式サイト</title>
+
+  <!-- フォント -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Markdown変換 -->
+  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
+
 <body>
-  <h1>すりクラ公式サイト</h1>
 
-  <h2><a href="news.html">お知らせ</a></h2>
-  <div id="news-list">読み込み中...</div>
+<header class="hero">
+  <img src="assets/header.png" class="hero-img" alt="ヘッダー画像">
+  <h1 class="site-title">すりクラ公式ホームページ</h1>
+  <p class="site-sub">統合版生活サーバー | 経済 × 建築 × コミュニティ</p>
+</header>
 
-  <section id="news">
-  <h2>最新のお知らせ</h2>
-  <div id="news-list">読み込み中...</div>
+<main>
 
-  <div style="margin-top: 15px;">
-    <a href="news.html" style="font-size: 1rem; text-decoration: underline;">→ 過去のお知らせを見る</a>
+<section class="section">
+  <h2>サーバーについて</h2>
+  <p>
+    すりクラは、<strong>統合版(Windows, Switch, PS4/PS5, スマホ対応)</strong>の
+    生活サーバーです。<br><br>
+
+    経済システム、保護機能、ショップ、クエスト、イベントなどが充実しており、  
+    初心者からベテランまで楽しめるコミュニティサーバーを目指しています。<br><br>
+
+    みんなで建築したり、交易したり、イベントに参加したり──  
+    あなたの日常に、もうひとつの生活を。
+  </p>
+</section>
+
+<section class="section">
+  <h2>参加方法</h2>
+  <ul>
+    <li>サーバーアドレス： <strong>play.surikura.net</strong></li>
+    <li>ポート： <strong>19132</strong>（統合版デフォルト）</li>
+    <li>対応：Minecraft BE（スマホ / Switch / PS4・PS5 / Windows10/11）</li>
+  </ul>
+</section>
+
+<section class="section">
+  <h2>リンク</h2>
+  <div class="link-grid">
+    <a href="https://discord.gg/" class="link-card" target="_blank">Discord</a>
+    <a href="https://twitter.com/" class="link-card" target="_blank">X（旧Twitter）</a>
+    <a href="https://minecraftpocket-servers.com/" class="link-card" target="_blank">サーバー投票</a>
+    <a href="news.html" class="link-card">お知らせ一覧</a>
   </div>
 </section>
 
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+<section class="section">
+  <h2>最新のお知らせ</h2>
+  <div id="news-list">読み込み中...</div>
+  <div style="margin-top: 12px;">
+    <a href="news.html" class="more-link">→ すべてのお知らせを見る</a>
+  </div>
+</section>
 
+</main>
+
+<footer>
+  <p>© 2025 すりクラ - Surikura Server</p>
+</footer>
+
+<!-- 最新3件のお知らせ読み込み -->
 <script>
 async function loadLatestNews() {
   const repo = "surikurajp/official.github.io";
   const container = document.getElementById("news-list");
 
   try {
-    // news フォルダ取得
     const response = await fetch(`https://api.github.com/repos/${repo}/contents/news`);
     const files = await response.json();
 
-    // md のみ
     const mdFiles = files.filter(f => f.name.endsWith(".md"));
-
-    // 日付新しい順に並び替え
     mdFiles.sort((a, b) => new Date(b.name) - new Date(a.name));
 
-    // 最新3件だけ取り出す
     const latest3 = mdFiles.slice(0, 3);
-
-    container.innerHTML = ""; // 初期の「読み込み中」を消す
+    container.innerHTML = "";
 
     for (const file of latest3) {
       const mdResponse = await fetch(file.download_url);
       const mdText = await mdResponse.text();
 
-      // frontmatter 抽出
       const frontMatterMatch = mdText.match(/^---\n([\s\S]*?)\n---/);
       let title = "タイトル不明";
       let date = "日付なし";
@@ -61,49 +99,35 @@ async function loadLatestNews() {
       if (frontMatterMatch) {
         const fm = frontMatterMatch[1];
 
-        // タイトル
         const titleMatch = fm.match(/title:\s*(.*)/);
         if (titleMatch) title = titleMatch[1].trim();
 
-        // 日付
         const dateMatch = fm.match(/date:\s*(.*)/);
-        if (dateMatch) {
-          date = new Date(dateMatch[1].trim()).toLocaleDateString("ja-JP");
-        }
+        if (dateMatch) date = new Date(dateMatch[1].trim()).toLocaleDateString("ja-JP");
 
-        // 本文除去
         body = mdText.replace(frontMatterMatch[0], "").trim();
       }
 
       const htmlBody = marked.parse(body);
-
-      // 必要に応じて短くする（長文は3行だけ）
-      const shortBody = htmlBody.length > 150 ? htmlBody.slice(0, 150) + "…" : htmlBody;
+      const shortBody = htmlBody.length > 140 ? htmlBody.slice(0, 140) + "…" : htmlBody;
 
       const div = document.createElement("div");
       div.className = "news-card";
-      div.style.marginBottom = "15px";
-      div.style.padding = "10px";
-      div.style.borderLeft = "4px solid #aaa";
-      div.style.background = "#fff";
-
       div.innerHTML = `
-        <h3 style="margin: 0 0 6px; font-size: 1.2rem;">${title}</h3>
-        <p style="color:#777; margin: 0 0 10px; font-size: 0.9rem;">${date}</p>
+        <h3>${title}</h3>
+        <p class="date">${date}</p>
         <div>${shortBody}</div>
       `;
 
       container.appendChild(div);
     }
 
-    // 記事が0件の場合
     if (latest3.length === 0) {
       container.textContent = "お知らせはありません。";
     }
 
   } catch (e) {
-    container.textContent = "お知らせの読み込みに失敗しました。";
-    console.error(e);
+    container.textContent = "読み込みエラーが発生しました。";
   }
 }
 
