--- a/news.html
+++ b/news.html
@@ -2,104 +2,77 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>お知らせ一覧</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>お知らせ一覧 - すりクラ</title>
+  <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 20px;
-      background: #fafafa;
-    }
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-    }
-    .news-card {
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      margin-bottom: 20px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-  </style>
 </head>
 
 <body>
 
-<section id="news">
+<header class="navbar">
+  <div class="nav-logo">すりクラ</div>
+  <nav class="nav-links" id="navLinks">
+    <a href="index.html">ホーム</a>
+    <a href="news.html">お知らせ</a>
+  </nav>
+
+  <div class="hamburger" onclick="toggleMenu()">
+    <span></span><span></span><span></span>
+  </div>
+</header>
+
+<section class="section">
   <h2>お知らせ一覧</h2>
-  <div id="news-list">読み込み中...</div>
+  <div id="news-list"></div>
 </section>
 
 <script>
+function toggleMenu() {
+  document.getElementById("navLinks").classList.toggle("active");
+}
+
 async function loadNews() {
-  const repo = "surikurajp/official.github.io";  // ←ここだけあなたのリポジトリ名
+  const repo = "surikurajp/official.github.io";
+  const response = await fetch(`https://api.github.com/repos/${repo}/contents/news`);
+  const files = await response.json();
+
+  files.sort((a, b) => new Date(b.name) - new Date(a.name));
+
   const container = document.getElementById("news-list");
 
-  try {
-    // newsフォルダ内の一覧を取得
-    const response = await fetch(`https://api.github.com/repos/${repo}/contents/news`);
-    const files = await response.json();
+  for (const file of files) {
+    const mdResponse = await fetch(file.download_url);
+    const mdText = await mdResponse.text();
+    const frontMatterMatch = mdText.match(/^---\n([\s\S]*?)\n---/);
 
-    // Markdown ファイルのみ取得
-    const mdFiles = files.filter(f => f.name.endsWith(".md"));
+    let title = "タイトル不明";
+    let date = "日付なし";
+    let body = mdText;
 
-    // 新しい順に並び替え
-    mdFiles.sort((a, b) => new Date(b.name) - new Date(a.name));
+    if (frontMatterMatch) {
+      const fm = frontMatterMatch[1];
 
-    container.innerHTML = ""; // 消す
+      const titleMatch = fm.match(/title:\s*(.*)/);
+      if (titleMatch) title = titleMatch[1];
 
-    for (const file of mdFiles) {
-      const mdResponse = await fetch(file.download_url);
-      const mdText = await mdResponse.text();
+      const dateMatch = fm.match(/date:\s*(.*)/);
+      if (dateMatch) date = new Date(dateMatch[1]).toLocaleDateString("ja-JP");
 
-      // frontmatter 抽出
-      const frontMatterMatch = mdText.match(/^---\n([\s\S]*?)\n---/);
-      let title = "タイトル不明";
-      let date = "日付なし";
-      let body = mdText;
-
-      if (frontMatterMatch) {
-        const fm = frontMatterMatch[1];
-
-        // タイトル
-        const titleMatch = fm.match(/title:\s*(.*)/);
-        if (titleMatch) title = titleMatch[1].trim();
-
-        // 日付
-        const dateMatch = fm.match(/date:\s*(.*)/);
-        if (dateMatch) {
-          date = new Date(dateMatch[1].trim()).toLocaleDateString("ja-JP");
-        }
-
-        // 本文から frontmatter を除去
-        body = mdText.replace(frontMatterMatch[0], "").trim();
-      }
-
-      const htmlBody = marked.parse(body);
-
-      // カード生成
-      const div = document.createElement("div");
-      div.className = "news-card";
-      div.innerHTML = `
-        <h3 style="margin: 0 0 6px; font-size: 1.4rem;">${title}</h3>
-        <p style="color:#777; margin: 0 0 12px; font-size: 0.9rem;">${date}</p>
-        <div>${htmlBody}</div>
-      `;
-
-      container.appendChild(div);
+      body = mdText.replace(frontMatterMatch[0], "").trim();
     }
 
-    // 1件もなければ
-    if (mdFiles.length === 0) {
-      container.textContent = "お知らせはありません。";
-    }
+    const htmlBody = marked.parse(body);
 
-  } catch (e) {
-    container.textContent = "読み込み中にエラーが発生しました。";
-    console.error(e);
+    const div = document.createElement("div");
+    div.className = "news-card";
+    div.innerHTML = `
+      <h3>${title}</h3>
+      <p class="date">${date}</p>
+      <div>${htmlBody}</div>
+    `;
+
+    container.appendChild(div);
   }
 }
 
