--- a/index.html
+++ b/index.html
@@ -6,73 +6,110 @@
   <title>すりクラ公式サイト</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
 
 <body>
-  <!-- ナビバー -->
-  <header class="navbar">
-    <div class="nav-logo">すりクラ</div>
-    <nav class="nav-links" id="navLinks">
-      <a href="index.html">ホーム</a>
-      <a href="news.html">お知らせ</a>
-      <a href="#links">リンク</a>
-      <a href="#about">サーバー説明</a>
-    </nav>
 
-    <!-- ハンバーガーメニュー -->
-    <div class="hamburger" onclick="toggleMenu()">
-      <span></span><span></span><span></span>
-    </div>
-  </header>
+<!-- ナビバー -->
+<header class="navbar">
+  <div class="nav-logo">すりクラ</div>
+  <nav class="nav-links" id="navLinks">
+    <a href="index.html">ホーム</a>
+    <a href="news.html">お知らせ</a>
+  </nav>
+  <div class="hamburger" onclick="toggleMenu()">
+    <span></span><span></span><span></span>
+  </div>
+</header>
 
-  <!-- ヘッダー画像 -->
-  <section class="hero">
-    <img src="header.png" alt="header" class="hero-img">
-  </section>
+<!-- Apple風 全画面ヒーローセクション -->
+<section class="hero" id="hero">
+  <img src="header.png" class="hero-img" id="heroImg">
+  <h1 class="hero-title">すりクラへようこそ</h1>
+</section>
 
-  <!-- サーバー説明 -->
-  <section class="section" id="about">
-    <h2>サーバーの詳細</h2>
-    <p>
-      すりクラは **マイクラ統合版(Bedrock)** の生活サーバーです。  
-      経済・ショップ・土地保護・便利コマンドなど、快適に遊べる環境を整えています。  
-      初心者歓迎！だれでも自由に参加できます。
-    </p>
-  </section>
+<!-- サーバー詳細（スクロールでフェードイン） -->
+<section class="section fade-section" id="about">
+  <h2>サーバーの詳細</h2>
+  <p>
+    すりクラはマイクラ統合版(Bedrock)の生活サーバーです。経済・ショップ・土地保護など…
+    Apple風のアニメーションで、よりリッチで魅力的なサイトになりました。
+  </p>
+</section>
 
-  <!-- お知らせ（最新3件） -->
-  <section class="section" id="news">
-    <h2>最新のお知らせ</h2>
-    <div id="news-list"></div>
-    <div class="more"><a href="news.html">→ 過去のお知らせも見る</a></div>
-  </section>
+<!-- お知らせ（スクロールでふわっと） -->
+<section class="section fade-section" id="news">
+  <h2>最新のお知らせ</h2>
+  <div id="news-list"></div>
+  <div class="more"><a href="news.html">→ 過去のお知らせを見る</a></div>
+</section>
 
-  <!-- リンク -->
-  <section class="section" id="links">
-    <h2>リンク</h2>
-    <ul class="link-list">
-      <li><a href="https://discord.com/invite/fxZ5EcyRxn" target="_blank">Discord サーバー</a></li>
-      <li><a href="https://github.com/surikurajp" target="_blank">GitHub</a></li>
-      <li><a href="/admin" target="_blank">管理者ログイン（Netlify CMS）</a></li>
-    </ul>
-  </section>
+<footer>© 2025 すりクラ</footer>
 
-  <footer>
-    © 2025 すりクラ - Surikura Server
-  </footer>
+<!-- GSAP 読み込み -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 
 <script>
+/*-------------------------------
+  ナビ（スマホ）
+--------------------------------*/
 function toggleMenu() {
   document.getElementById("navLinks").classList.toggle("active");
 }
 
-// 最新3件のお知らせ
+/*-------------------------------
+  Apple風ヒーローアニメーション
+--------------------------------*/
+gsap.registerPlugin(ScrollTrigger);
+
+gsap.to("#heroImg", {
+  scale: 0.7,
+  opacity: 0,
+  scrollTrigger: {
+    trigger: "#hero",
+    start: "top top",
+    end: "bottom top",
+    scrub: true
+  }
+});
+
+gsap.to(".hero-title", {
+  y: -200,
+  opacity: 0,
+  scrollTrigger: {
+    trigger: "#hero",
+    start: "top top",
+    end: "bottom top",
+    scrub: true
+  }
+});
+
+/*-------------------------------
+  下のセクションをフェードイン
+--------------------------------*/
+gsap.utils.toArray(".fade-section").forEach(section => {
+  gsap.from(section, {
+    opacity: 0,
+    y: 60,
+    duration: 1,
+    scrollTrigger: {
+      trigger: section,
+      start: "top 80%",
+      toggleActions: "play none none reverse"
+    }
+  });
+});
+
+/*-------------------------------
+  お知らせ読み込み（そのまま）
+--------------------------------*/
 async function loadNews() {
   const repo = "surikurajp/official.github.io";
   const response = await fetch(`https://api.github.com/repos/${repo}/contents/news`);
   const files = await response.json();
-
-  // 日付順ソート（新しい順）
   files.sort((a, b) => new Date(b.name) - new Date(a.name));
 
   const container = document.getElementById("news-list");
@@ -87,29 +124,20 @@ async function loadNews() {
 
     let title = "タイトル不明";
     let date = "日付なし";
-    let body = mdText;
 
     if (frontMatterMatch) {
       const fm = frontMatterMatch[1];
-
       const titleMatch = fm.match(/title:\s*(.*)/);
       if (titleMatch) title = titleMatch[1];
-
       const dateMatch = fm.match(/date:\s*(.*)/);
       if (dateMatch) date = new Date(dateMatch[1]).toLocaleDateString("ja-JP");
-
-      body = mdText.replace(frontMatterMatch[0], "").trim();
     }
 
     const div = document.createElement("div");
     div.className = "news-card";
-    div.innerHTML = `
-      <h3>${title}</h3>
-      <p class="date">${date}</p>
-      <p>${body.substring(0, 80)}...</p>
-    `;
-
+    div.innerHTML = `<h3>${title}</h3><p class="date">${date}</p>`;
     container.appendChild(div);
+
     count++;
   }
 }
@@ -117,4 +145,5 @@ loadNews();
 </script>
 
 </body>
+
 </html>
