--- a/index.html
+++ b/index.html
@@ -5,145 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>すりクラ公式サイト</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+  <!-- GSAP + ScrollTrigger -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
-
 <body>
 
 <!-- ナビバー -->
 <header class="navbar">
-  <div class="nav-logo">すりクラ</div>
-  <nav class="nav-links" id="navLinks">
-    <a href="index.html">ホーム</a>
-    <a href="news.html">お知らせ</a>
-  </nav>
-  <div class="hamburger" onclick="toggleMenu()">
-    <span></span><span></span><span></span>
+  <div class="nav-container">
+    <div class="logo">すりクラ</div>
+    <nav id="navMenu">
+      <a href="#about">サーバー概要</a>
+      <a href="#links">リンク</a>
+      <a href="news.html">お知らせ</a>
+    </nav>
+    <div class="hamburger" onclick="toggleMenu()">☰</div>
   </div>
 </header>
 
-<!-- Apple風 全画面ヒーローセクション -->
+<!-- Apple風アニメーションヒーロー -->
 <section class="hero" id="hero">
-  <img src="header.png" class="hero-img" id="heroImg">
-  <h1 class="hero-title">すりクラへようこそ</h1>
+  <img src="header.png" class="hero-image" id="heroImage" />
+  <h1 class="hero-title" id="heroTitle">すりクラ 公式サイト</h1>
 </section>
 
-<!-- サーバー詳細（スクロールでフェードイン） -->
-<section class="section fade-section" id="about">
-  <h2>サーバーの詳細</h2>
+<!-- サーバー概要 -->
+<section class="section" id="about">
+  <h2>サーバー概要</h2>
   <p>
-    すりクラはマイクラ統合版(Bedrock)の生活サーバーです。経済・ショップ・土地保護など…
-    Apple風のアニメーションで、よりリッチで魅力的なサイトになりました。
+    すりクラは統合版の生活サーバーです。初心者でも安心して楽しめる環境づくりを行っています。
+    経済・ショップ・保護システムなど多くの便利機能を搭載！
   </p>
 </section>
 
-<!-- お知らせ（スクロールでふわっと） -->
-<section class="section fade-section" id="news">
+<!-- お知らせ（最新3件） -->
+<section class="section" id="news">
   <h2>最新のお知らせ</h2>
-  <div id="news-list"></div>
-  <div class="more"><a href="news.html">→ 過去のお知らせを見る</a></div>
+  <div id="latest-news"></div>
+  <div style="margin-top: 10px;">
+    <a href="news.html" class="news-link">→ 過去のお知らせを見る</a>
+  </div>
 </section>
 
-<footer>© 2025 すりクラ</footer>
+<!-- リンク -->
+<section class="section" id="links">
+  <h2>リンク</h2>
+  <ul>
+    <li><a href="https://discord.gg/">Discord</a></li>
+    <li><a href="https://minecraft.net/">Minecraft 公式</a></li>
+  </ul>
+</section>
 
-<!-- GSAP 読み込み -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+<footer>
+  <p>© 2025 すりクラ</p>
+</footer>
 
-<script>
-/*-------------------------------
-  ナビ（スマホ）
---------------------------------*/
-function toggleMenu() {
-  document.getElementById("navLinks").classList.toggle("active");
-}
-
-/*-------------------------------
-  Apple風ヒーローアニメーション
---------------------------------*/
-gsap.registerPlugin(ScrollTrigger);
-
-gsap.to("#heroImg", {
-  scale: 0.7,
-  opacity: 0,
-  scrollTrigger: {
-    trigger: "#hero",
-    start: "top top",
-    end: "bottom top",
-    scrub: true
-  }
-});
-
-gsap.to(".hero-title", {
-  y: -200,
-  opacity: 0,
-  scrollTrigger: {
-    trigger: "#hero",
-    start: "top top",
-    end: "bottom top",
-    scrub: true
-  }
-});
-
-/*-------------------------------
-  下のセクションをフェードイン
---------------------------------*/
-gsap.utils.toArray(".fade-section").forEach(section => {
-  gsap.from(section, {
-    opacity: 0,
-    y: 60,
-    duration: 1,
-    scrollTrigger: {
-      trigger: section,
-      start: "top 80%",
-      toggleActions: "play none none reverse"
-    }
-  });
-});
-
-/*-------------------------------
-  お知らせ読み込み（そのまま）
---------------------------------*/
-async function loadNews() {
-  const repo = "surikurajp/official.github.io";
-  const response = await fetch(`https://api.github.com/repos/${repo}/contents/news`);
-  const files = await response.json();
-  files.sort((a, b) => new Date(b.name) - new Date(a.name));
-
-  const container = document.getElementById("news-list");
-  let count = 0;
-
-  for (const file of files) {
-    if (count >= 3) break;
-
-    const mdResponse = await fetch(file.download_url);
-    const mdText = await mdResponse.text();
-    const frontMatterMatch = mdText.match(/^---\n([\s\S]*?)\n---/);
-
-    let title = "タイトル不明";
-    let date = "日付なし";
-
-    if (frontMatterMatch) {
-      const fm = frontMatterMatch[1];
-      const titleMatch = fm.match(/title:\s*(.*)/);
-      if (titleMatch) title = titleMatch[1];
-      const dateMatch = fm.match(/date:\s*(.*)/);
-      if (dateMatch) date = new Date(dateMatch[1]).toLocaleDateString("ja-JP");
-    }
-
-    const div = document.createElement("div");
-    div.className = "news-card";
-    div.innerHTML = `<h3>${title}</h3><p class="date">${date}</p>`;
-    container.appendChild(div);
-
-    count++;
-  }
-}
-loadNews();
-</script>
-
+<script src="script.js"></script>
 </body>
-
 </html>
