--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <section class="section" id="about">
     <h2>サーバーの詳細</h2>
     <p>
-      すりクラは **マイクラ統合版(Bedrock)** の生活サーバーです。  
+      すりクラは マイクラ統合版(Bedrock)の生活サーバーです。  
       経済・ショップ・土地保護・便利コマンドなど、快適に遊べる環境を整えています。  
       初心者歓迎！だれでも自由に参加できます。
     </p>
@@ -46,6 +46,16 @@
     <div id="news-list"></div>
     <div class="more"><a href="news.html">→ 過去のお知らせも見る</a></div>
   </section>
+
+    <!-- サーバーアドレス -->
+ <section class="section" id="address">
+  <h2>参加方法</h2>
+  <ul>
+    <li>サーバーアドレス： <strong>surikura.aternos.me</strong></li>
+    <li>ポート： <strong>59024</strong></li>
+    <li>対応：Minecraft BE（スマホ / Switch / PS4・PS5 / Windows10/11）</li>
+  </ul>
+</section>
 
   <!-- リンク -->
   <section class="section" id="links">
