--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <!-- ナビバー -->
   <header class="navbar">
-    <a href="/index.html" class="nav-logo">すりクラ</a>
+    <a href="https://surikurajp.github.io/official.github.io/index.html" class="nav-logo" id="navlinks">すりクラ</a>
     <nav class="nav-links" id="navLinks">
       <a href="index.html">ホーム</a>
       <a href="news.html">お知らせ</a>
