--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@
 <body>
 
 <header class="navbar">
-  <div class="nav-logo">すりクラ</div>
+  <a href="index.html" class="nav-logo">すりクラ</a>
   <nav class="nav-links" id="navLinks">
     <a href="index.html">ホーム</a>
     <a href="news.html">お知らせ</a>
