--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" href="/favicon.png">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <meta property="og:title" content="すりクラ 公式サイト" />
+  <meta property="og:description" content="すりクラの公式ウェブサイトです。" />
+  <meta property="og:image" content="https://surikurajp.github.io/official.github.io/header.png" />
+  <meta property="og:url" content="https://surikurajp.github.io/official.github.io/" />
+  <meta property="og:type" content="website" />
 </head>
 
 <body>
